add generator component

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.8",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.3",
     "@vercel/analytics": "^1.3.1",
